LICENSE
javac -classpath .:/run_dir/junit-4.12.jar:target/dependency/* -d . Main.java
Main.java:1: error: class, interface, or enum expected
variable_1 = input("What is your name?")
^
